# SkyInstaller

./: CMakeLists.txt  Makefile  main.cpp  readme.md
src/: compat.cpp  compat.hpp  main.cpp
